--- a/redirects/appstore_firefox_add_oogle.html
+++ b/redirects/appstore_firefox_add_oogle.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <script>
 
-    window.open("https://appsto.re/us/-LZ_6.i");
-
+     window.open("https://appsto.re/us/-LZ_6.i", "", "width=700, height=700");
 </script>
