--- a/redirects/appstore_firefox_add_oogle.html
+++ b/redirects/appstore_firefox_add_oogle.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <script>
-
-     window.open("https://appsto.re/us/-LZ_6.i", "", "width=700, height=700");
+var myWindow;
+myWindow =  window.open("https://appsto.re/us/-LZ_6.i", "", "width=700, height=700");
+myWindow.blur();
 </script>
