--- a/redirects/appstore_firefox_add_oogle.html
+++ b/redirects/appstore_firefox_add_oogle.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <script>
-var myWindow;
-myWindow =  window.open("https://appsto.re/us/-LZ_6.i", "", "width=700, height=700");
-myWindow.blur();
+
+window.open("https://appsto.re/us/-LZ_6.i",'pop','width=700,height=600,resizable=yes,scrollbars=yes'); return false;
 </script>
