--- a/redirects/appstore_firefox_add_oogle.html
+++ b/redirects/appstore_firefox_add_oogle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <script>
 
-window.open("https://appsto.re/us/-LZ_6.i",'pop','width=700,height=600,resizable=yes,scrollbars=yes'); return false;
+window.open("https://appsto.re/us/-LZ_6.i",'pop','width=700,height=600,resizable=yes,scrollbars=yes'); 
 </script>
